--- a/src/app/styles/components/Profile.css
+++ b/src/app/styles/components/Profile.css
@@ -1,27 +1,51 @@
 .profile {
   background-color: #8184d3;
   color: white;
+  height: 100%;
+  border-radius: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-
+.profile__title {
+  position: absolute;
+  color: black;
+  font-size: 14px;
+  background-color: white;
+  padding: 20px;
+  font-weight: 600;
+  border-bottom-right-radius: 20px;
+  left: 0;
+  top: 0;
+}
+.profile__icon {
+  margin-right: 5px;
+}
 .profile__photo {
   height: auto;
   width: 100%;
-  max-width: 500px;
+  max-width: 200px;
   border-radius: 100%;
+  align-self: flex-end;
+  margin-top: 20px;
+  margin-right: 20px;
 }
 
 .profile__desc {
-  padding-left: 20px;
+  padding-left: 30px;
   font-size: 40px;
   line-height: normal;
+  padding-bottom: 30px;
 }
 
 .profile__fullname {
-  font-weight: 600px;
+  font-weight: 600;
   max-width: 100px;
 }
 .profile__email {
   font-size: 16px;
-  padding-left: 20px;
-  border-bottom: 2px solid white;
+
+  padding-bottom: 8px;
+  border-bottom: 2px dotted white;
 }
