add component about me and add styles

--- a/src/app/styles/components/Portfolio.css
+++ b/src/app/styles/components/Portfolio.css
@@ -41,7 +41,7 @@
   overflow: hidden;
 }
 .portfolio__project--three {
-  background-color: #ffa094;
+  background-color: #f98948;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
