--- a/src/app/styles/components/Profile.css
+++ b/src/app/styles/components/Profile.css
@@ -1,6 +1,6 @@
 .profile {
-  background-color: #8184d3;
-  color: white;
+  background-color: #d1c3bc;
+  color: black;
   height: 100%;
   border-radius: 20px;
   position: relative;
@@ -23,12 +23,12 @@
   margin-right: 5px;
 }
 .profile__photo {
-  background-color: #efaeff;
+  background-color: #f8f7f4;
   height: 200px;
   width: 200px;
   border-radius: 100%;
-  border: 8px solid #8184d3;
-  outline: 8px solid white;
+  border: 8px solid #ffae2a;
+  outline: 8px solid #43242d;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -56,7 +56,6 @@
 }
 .profile__email {
   font-size: 16px;
-
   padding-bottom: 8px;
   border-bottom: 2px dotted white;
 }
