--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,6 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --brand: #ffae2a;
+  --secondtextcolor: #707c84;
 }
 
 @media (prefers-color-scheme: dark) {
