--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,7 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --brand: #ffae2a;
+  --brand: #f11158;
   --secondtextcolor: #707c84;
 }
 
