--- a/src/app/styles/components/Profile.css
+++ b/src/app/styles/components/Profile.css
@@ -1,5 +1,5 @@
 .profile {
-  background-color: #d1c3bc;
+  background-color: #ec5b54;
   color: black;
   height: 100%;
   border-radius: 20px;
@@ -23,15 +23,11 @@
   margin-right: 5px;
 }
 .profile__photo {
-  background-color: #f8f7f4;
-  height: 200px;
-  width: 200px;
-  border-radius: 100%;
-  border: 8px solid #ffae2a;
-  outline: 8px solid #43242d;
+  height: 400px;
+  width: 400px;
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 20%;
   transform: translate(-50%, -50%);
 }
 
