--- a/src/app/styles/components/Projects.css
+++ b/src/app/styles/components/Projects.css
@@ -21,6 +21,7 @@
   object-fit: cover;
   object-position: top;
   width: 400px;
+  height: auto;
   transition: transform 1s ease;
   transform-origin: center;
   margin-bottom: 30px;
@@ -28,5 +29,13 @@
 
 .projects__button {
   background-color: #f11158;
+  border: none;
+  border-radius: 4px;
+  color: white;
   font-weight: 600;
+  padding: 10px 20px;
+}
+
+.projects__button svg {
+  margin-left: 10px;
 }
