--- a/src/app/styles/components/Contact.css
+++ b/src/app/styles/components/Contact.css
@@ -1,12 +1,7 @@
 .contact {
-  border-radius: 20px;
   background-color: #f4f5f6;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: var(--brand);
+  padding: 160px 0;
+  text-align: center;
 }
 
 .contact__text {
