--- a/src/app/styles/components/Footer.css
+++ b/src/app/styles/components/Footer.css
@@ -1,5 +1,12 @@
 .footer {
   background-color: #424242;
   color: white;
-  padding: 120px 0;
+  padding: 150px 0;
+}
+.footer__icon {
+  display: flex;
+  gap: 30px;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 20px;
 }
