--- a/src/app/styles/components/ButtonLink.css
+++ b/src/app/styles/components/ButtonLink.css
@@ -1,13 +1,17 @@
 .button-link {
   background-color: #f11158;
-  border: none;
-  border-radius: 4px;
+  border: 1px solid;
+  border-radius: 24px;
   color: white;
   display: inline-block;
   font-weight: 600;
-  padding: 10px 20px;
+  padding: 16px 24px;
+  text-transform: capitalize;
+  line-height: 1rem;
 }
-
+.button-link:hover {
+  background-color: #f53d77;
+}
 .button-link svg {
   margin-left: 10px;
 }
