--- a/src/app/styles/components/Footer.css
+++ b/src/app/styles/components/Footer.css
@@ -1,12 +1,18 @@
 .footer {
   background-color: #424242;
   color: white;
-  padding: 150px 0;
+  padding: 100px 0;
 }
-.footer__icon {
+.footer__icons {
   display: flex;
   gap: 30px;
   flex-direction: row;
   justify-content: center;
   font-size: 20px;
+}
+.footer__icons a:hover {
+  color: var(--brand);
+}
+.footer__copyright {
+  text-align: center;
 }
