--- a/src/app/styles/components/ButtonLink.css
+++ b/src/app/styles/components/ButtonLink.css
@@ -10,7 +10,7 @@
   line-height: 1rem;
 }
 .button-link:hover {
-  background-color: #f53d77;
+  background-color: #ea3870;
 }
 .button-link svg {
   margin-left: 10px;
