--- a/src/app/styles/components/Portfolio.css
+++ b/src/app/styles/components/Portfolio.css
@@ -6,15 +6,11 @@
   justify-content: space-between;
   background-color: #f4f5f6;
   border-radius: 20px;
-  padding: 80px 50px;
+  padding: 100px 50px 50px;
 }
 
 .portfolio__text {
   margin-top: 30px;
-  color: var(--secondtextcolor);
-  font-size: 18px;
-  line-height: 1.6;
-  letter-spacing: 0.5;
 }
 .portfolio__link {
   color: var(--brand);
