--- a/src/app/styles/components/Profile.css
+++ b/src/app/styles/components/Profile.css
@@ -1,6 +1,5 @@
 .profile {
   background-color: #ec5b54;
-  color: black;
   height: 100%;
   border-radius: 20px;
   position: relative;
@@ -41,16 +40,21 @@
 
 .profile__desc {
   padding-left: 30px;
-  font-size: 40px;
-  line-height: normal;
   padding-bottom: 30px;
   color: white;
+}
+
+.profile__name {
+  color: white;
+  font-size: 40px;
+  line-height: normal;
 }
 
 .profile__fullname {
   font-weight: 600;
   max-width: 100px;
 }
+
 .profile__email {
   font-size: 16px;
   padding-bottom: 8px;
