--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -36,6 +36,13 @@ a {
   text-decoration: none;
 }
 
+p {
+  color: var(--secondtextcolor);
+  font-size: 18px;
+  line-height: 1.6;
+  letter-spacing: 0.5;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
