--- a/src/app/styles/components/Header.css
+++ b/src/app/styles/components/Header.css
@@ -2,8 +2,10 @@
   color: #707c84;
   font-weight: 600;
   position: absolute;
-  top: 60px;
+  top: 40px;
   width: 100%;
+  right: 50px;
+  z-index: 1;
 }
 
 .header-menu a:hover {
