--- a/src/app/styles/components/Portfolio.css
+++ b/src/app/styles/components/Portfolio.css
@@ -3,14 +3,20 @@
   flex-direction: column;
   height: 100%;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   background-color: #f4f5f6;
-  border-radius: 20px;
   padding: 100px 50px 50px;
+  position: relative;
 }
 
 .portfolio__text {
   margin-top: 30px;
+}
+.portfolio__links {
+  position: absolute;
+  padding: 0 40px;
+  bottom: 40px;
+  width: 100%;
 }
 .portfolio__link {
   color: var(--brand);
