--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,7 +2,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --brand: #f11158;
-  --secondtextcolor: #707c84;
+  --secondtextcolor: #444c51;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -47,4 +47,12 @@ p {
   html {
     color-scheme: dark;
   }
+}
+
+.playdown {
+  color: #677075;
+}
+
+.highlight {
+  color: var(--brand);
 }
