--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #424242;
   color: white;
-  padding: 100px 0 20px;
+  padding: 40px 0 20px;
 }
 .footer__icons {
   display: flex;
@@ -16,8 +16,12 @@
 .footer__copyright {
   font-size: 14px;
   text-align: center;
-  margin: 120px 0 0;
+  margin: 80px 0 0;
   border-top: 1px solid #777;
   padding: 40px 0 20px;
   color: #fff;
+}
+.footer__logo {
+  width: 200px;
+  height: 130px;
 }
