--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -7,7 +7,7 @@
   display: flex;
   gap: 30px;
   flex-direction: row;
-  justify-content: center;
+  justify-content: end;
   font-size: 20px;
 }
 .footer__icons a:hover {
