udpate name´s button of  projects components and fix line decoration

--- a/src/styles/components/Review.css
+++ b/src/styles/components/Review.css
@@ -15,11 +15,10 @@
   text-align: center;
 }
 .review__decoration {
-  border: 1px solid var(--brand);
-  height: 2px;
-  width: 30px;
+  border-top: 1px solid var(--brand);
+  height: 1px;
+  width: 50px;
   margin: auto;
-  margin-top: 20px;
 }
 .review__icon {
   color: var(--brand);
