--- a/src/styles/components/Home.css
+++ b/src/styles/components/Home.css
@@ -1,6 +1,8 @@
-.hero > .row,
-.hero {
-  height: 100vh;
-  min-height: 800px;
-  max-height: 900px;
+@media (min-width: 768px) {
+  .hero > .row,
+  .hero {
+    height: 100vh;
+    min-height: 800px;
+    max-height: 900px;
+  }
 }
