--- a/src/styles/components/Menu.css
+++ b/src/styles/components/Menu.css
@@ -2,6 +2,12 @@
   display: flex;
   gap: 30px;
   justify-content: center;
+  color: white;
+}
+@media (min-width: 768px) {
+  .menu {
+    color: inherit;
+  }
 }
 .menu a:hover {
   color: var(--brand);
