--- a/src/styles/components/Portfolio.css
+++ b/src/styles/components/Portfolio.css
@@ -1,12 +1,18 @@
 .portfolio {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   align-items: center;
   justify-content: start;
   background-color: #f4f5f6;
-  padding: 150px 100px 50px;
+  padding: 50px 0;
   position: relative;
+}
+
+@media (min-width: 768px) {
+  .portfolio {
+    padding: 150px 100px 50px;
+  }
 }
 .portfolio__intro {
   display: flex;
