--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -1,27 +1,48 @@
 .footer {
   background-color: #424242;
   color: white;
-  padding: 40px 0 20px;
 }
+@media (min-width: 768px) {
+  .footer {
+    padding: 40px 0 0;
+  }
+}
+
 .footer__icons {
   display: flex;
   gap: 30px;
   flex-direction: row;
-  justify-content: end;
+  justify-content: center;
   font-size: 20px;
 }
+
+@media (min-width: 768px) {
+  .footer__icons {
+    justify-content: end;
+  }
+}
+
 .footer__icons a:hover {
   color: var(--brand);
 }
 .footer__copyright {
   font-size: 14px;
   text-align: center;
-  margin: 80px 0 0;
   border-top: 1px solid #777;
-  padding: 40px 0 20px;
+  padding: 40px 0;
   color: #fff;
 }
 .footer__logo {
   width: 200px;
   height: 130px;
+}
+
+.footer .menu {
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .footer .menu {
+    flex-direction: row;
+  }
 }
