--- a/src/styles/components/Heading.css
+++ b/src/styles/components/Heading.css
@@ -3,10 +3,15 @@
 }
 
 .heading__title {
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 600;
   margin-bottom: 25px;
   text-transform: capitalize;
+}
+@media (min-width: 768px) {
+  .heading__title {
+    font-size: 40px;
+  }
 }
 
 .heading__subtitle {
