--- a/src/styles/components/Portfolio.css
+++ b/src/styles/components/Portfolio.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  min-height: 670px;
   align-items: center;
   justify-content: start;
   text-align: center;
