--- a/src/styles/components/Title.css
+++ b/src/styles/components/Title.css
@@ -5,6 +5,7 @@
   color: black;
   line-height: 1.4;
   text-transform: capitalize;
+  margin-bottom: 20;
 }
 @media (min-width: 768px) {
   .title {
