--- a/src/styles/components/About.css
+++ b/src/styles/components/About.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: end;
   justify-content: end;
+  color: white;
 }
 
 .about__info {
@@ -18,6 +19,6 @@
   height: auto;
 }
 .about__desc {
-  padding: 30px;
+  padding: 40px 80px;
   border-radius: 20px;
 }
