--- a/src/styles/components/Profile.css
+++ b/src/styles/components/Profile.css
@@ -1,5 +1,5 @@
 .profile {
-  background-image: url(../../../public/pexels-cottonbro-2773518.jpg);
+  background-image: url(../../../public/profile.jpg);
   background-size: cover;
   background-position: center;
   height: 50dvh;
