--- a/src/styles/components/ButtonLink.css
+++ b/src/styles/components/ButtonLink.css
@@ -1,5 +1,5 @@
 .button-link {
-  background-color: #f11158;
+  background-color: var(--brand);
   border: 1px solid;
   border-radius: 24px;
   color: white;
@@ -10,7 +10,7 @@
   line-height: 1rem;
 }
 .button-link:hover {
-  background-color: #ea3870;
+  background-color: var(--brand);
 }
 .button-link svg {
   margin-left: 10px;
