--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --brand: #f11158;
+  --brand: #e70e53;
   --secondtextcolor: #444c51;
 }
 
