--- a/src/styles/components/Title.css
+++ b/src/styles/components/Title.css
@@ -8,6 +8,12 @@
 }
 @media (min-width: 768px) {
   .title {
+    font-size: 42px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .title {
     font-size: 58px;
   }
 }
