--- a/src/styles/components/Projects.css
+++ b/src/styles/components/Projects.css
@@ -12,7 +12,8 @@
   margin-bottom: 50px;
   gap: 30px;
 }
-@media (min-width: 768px) {
+
+@media (min-width: 1200px) {
   .projects__boxes {
     flex-direction: row;
     gap: 150px;
@@ -29,7 +30,17 @@
   transition: transform 1s ease;
   transform-origin: center;
 }
+
 @media (min-width: 768px) {
+  .project__image {
+    width: 550px;
+  }
+  .project__image:hover {
+    transform: scale(1.03);
+    filter: brightness(1.05);
+  }
+}
+@media (min-width: 1200px) {
   .project__image {
     width: 400px;
   }
