--- a/src/styles/components/Projects.css
+++ b/src/styles/components/Projects.css
@@ -32,20 +32,47 @@
   aspect-ratio: 2 / 1;
   transition: transform 0.5s ease;
   transform-origin: center;
-  margin-bottom: 24px;
 }
 
 @media (min-width: 768px) {
   .project__image {
     width: 550px;
   }
-  .project__image:hover {
-    transform: scale(1.03);
-  }
 }
 @media (min-width: 1200px) {
   .project__image {
     width: 100%;
+  }
+}
+.project__image__wrapper {
+  position: relative;
+  margin-bottom: 24px;
+}
+.project__image__overlay {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+.project__button {
+  background-color: var(--brand);
+  color: white;
+  padding: 16px 16px;
+  font-weight: 600;
+
+  &:hover {
+    background-color: var(--hover);
   }
 }
 .project__text {
