--- a/src/styles/components/Projects.css
+++ b/src/styles/components/Projects.css
@@ -50,7 +50,7 @@
 }
 .project__image__overlay {
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   top: 0;
   left: 0;
   width: 100%;
@@ -58,21 +58,35 @@
   opacity: 0;
   cursor: pointer;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 16px;
 
   &:hover {
     opacity: 1;
   }
 }
 .project__button {
-  background-color: var(--brand);
+  background-color: black;
   color: white;
   padding: 16px 16px;
   font-weight: 600;
+  width: 150px;
 
   &:hover {
-    background-color: var(--hover);
+    background-color: var(--brand);
+  }
+}
+
+.project__button--secondary {
+  background-color: white;
+  border: 1px solid var(--brand);
+  color: var(--brand);
+
+  &:hover {
+    background-color: var(--brand);
+    color: white;
   }
 }
 .project__text {
