--- a/src/styles/components/Projects.css
+++ b/src/styles/components/Projects.css
@@ -62,6 +62,7 @@
   align-items: center;
   justify-content: center;
   gap: 16px;
+  transition: all 0.3s ease;
 
   &:hover {
     opacity: 1;
@@ -73,6 +74,7 @@
   padding: 16px 16px;
   font-weight: 600;
   width: 150px;
+  transition: all 0.3s ease;
 
   &:hover {
     background-color: var(--brand);
